--- a/tania.html
+++ b/tania.html
@@ -2,29 +2,35 @@
 <html>
   <head>
       <title>About Me</title>
+      <link rel="stylesheet" href="tania.css"/>
   </head>
+
   <body>
-    <h1>Tania Nelzy</h1>
-    <div>
-      <h2>About Me</h2>
-      <img src="Images/Tania.jpg"/>
-      <p>Professional Amateur</p>
-      <p>I use letters and symbols to control big machines.</p>
+    <div class="wrapper">
+        <div id="header">
+          <h1>Tania Nelzy</h1>
+        </div>
+
+        <div id="sidebar" class="next">
+            <ul>
+                <li class="bar"><a href="tania.html">Home</a></li>
+                <li class="bar"><a href="stuff.html">Favorites</a></li>
+                <li class="bar"><a href="photos.html">Photos</a></li>
+                <li class="bar"><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+
+        <div id="main" class="next">
+          <h2>About Me</h2>
+          <img src="Tania.jpg"/>
+          <p>Professional Amateur</p>
+          <p>I use letters and symbols to control big machines.</p>
+        </div>
+
     </div>
-    <div>
-      <h3>Likes</h3>
-        <ul>
-          <li>Chocolate</li>
-        </ul>
-      <h3>Dislikes</h3>
-        <ul>
-          <li>All animals</li>
-        </ul>
-    </div>
-    <div>
-      <h3>Social Media</h3>
-        <ul>
-          <li></li>
+
+    
+
   </body>
 
 </html>
